syntax = "proto3";

package go.micro.srv.key; 

service KeyService {
  rpc AddKey(KeyRequest) returns (KeyResponse) {}
  rpc GetUserKey(GetUserKeyRequest) returns (KeyResponse) {}
  rpc GetUserKeys(GetUserKeysRequest) returns (KeyListResponse) {}
  rpc RemoveKey(RemoveKeyRequest) returns (KeyResponse) {}
  rpc UpdateKeyDescription(KeyRequest) returns (KeyResponse) {}
}

// Requests
message KeyRequest {
  string keyID = 1;
  string userID = 2;
  string exchange = 3;
  string key = 4;
  string secret = 5;
  string description = 6;
  string status = 7;
}

message GetUserKeyRequest {
  string userID = 1;
  string keyID = 2;
}

message GetUserKeysRequest {
    string userID = 1;
}

message RemoveKeyRequest {
  string userID = 1;
  string keyID = 2;
}

// Responses
message Key {
  string keyID = 1;
  string userID = 2;
  string exchange = 3;
  string key = 4;
  string secret = 5;
  string status = 6;
  string description = 7;
}

message UserKeyData {
  Key key = 1;
}

message UserKeysData {
  repeated Key keys = 1;
}

message KeyResponse {
  string status = 1;
  string message = 2;
  UserKeyData data = 3;
}

message KeyListResponse {
  string status = 1;
  string message = 2;
  UserKeysData data = 3;
}